--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+.background{
+  background-image:  url("https://i.ibb.co/CQR7B4N/Rectangle-1.png");
+  background-size: cover;
+  background-blend-mode: luminosity;
+  height: 108vh;
+  font-family: 'Dosis';
+  margin: 0;
+}
+
 .App {
   text-align: center;
 }
